--- a/schemas/api-reference-v0.yml
+++ b/schemas/api-reference-v0.yml
@@ -1,6 +1,10 @@
-$schema: 'http://json-schema.org/draft-06/schema#'
+$schema: "/schemas/common/metadata-metaschema.json#"
+$id: "/schemas/common/api-reference-v0.json#"
 title: API Reference File
 description: Reference of methods implemented by API
+metadata:
+  name: api
+  version: 0
 type: object
 definitions:
   scopeExpressionTemplateString:
