--- a/schemas/exchanges-reference-v0.yml
+++ b/schemas/exchanges-reference-v0.yml
@@ -1,6 +1,10 @@
-$schema: 'http://json-schema.org/draft-06/schema#'
+$schema: "/schemas/common/metadata-metaschema.json#"
+$id: "/schemas/common/exchanges-reference-v0.json#"
 title: Exchange Reference File
 description: Reference of exchanges published
+metadata:
+  name: exchanges
+  version: 0
 type: object
 properties:
   version:
