Bug 1507521 - require apiVersion and not version in references

--- a/schemas/exchanges-reference-v0.yml
+++ b/schemas/exchanges-reference-v0.yml
@@ -8,9 +8,13 @@ metadata:
 type: object
 properties:
   version:
-    description: Exchange reference version
+    description: (deprecated)
     enum:
       - 0
+  apiVersion:
+    description: Version of the API
+    type: string
+    pattern: '^v[0-9]+$'
   $schema:
     description: >-
       Link to schema for this reference. That is a link to this very document.
@@ -111,7 +115,7 @@ properties:
         - schema
 additionalProperties: false
 required:
-  - version
+  - apiVersion
   - $schema
   - title
   - description
