--- a/schemas/api-reference-v0.yml
+++ b/schemas/api-reference-v0.yml
@@ -83,7 +83,7 @@ definitions:
         additionalProperties: false
 properties:
   version:
-    description: API reference version
+    description: (deprecated)
     type: integer
     enum:
       - 0
@@ -241,7 +241,7 @@ properties:
         - description
 additionalProperties: false
 required:
-  - version
+  - apiVersion
   - $schema
   - title
   - description
